# BombKurdistan

./: .gitignore  .gitmodules  Bomb.cpp  Bomb.h  Boss.cpp  Boss.h  BossAttack.cpp  BossAttack.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Difficulty.cpp  Makefile  Player.cpp  Player.h  README.md  build.sh  main.cpp
.github/workflows/: build-and-deploy.yml  deploy-to-itch.yml
assets/: shell.html
cmake/: mingw-toolchain.cmake
inc/: Bomb.hpp  Boss.hpp  BossAttack.hpp  Bullet.hpp  Constants.hpp  Difficulty.hpp  Game.hpp  GlobalBounds.hpp  Input.hpp  MainMenu.hpp  PauseScreen.hpp  Player.hpp  Settings.hpp
src/: Bomb.cpp  Boss.cpp  BossAttack.cpp  Bullet.cpp  Difficulty.cpp  Game.cpp  GlobalBounds.cpp  Input.cpp  MainMenu.cpp  PauseScreen.cpp  Player.cpp  Settings.cpp  main.cpp
